--- a/0x02-CSS_advanced/styles/11-style.css
+++ b/0x02-CSS_advanced/styles/11-style.css
@@ -8,11 +8,13 @@ body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
 }
 
 a {
-    color: var(--text-color)
-}
+    color: var(--text-color);
+    text-decoration: none;
+}   
 
 .visually-hidden {
     display: none;
@@ -24,6 +26,13 @@ a {
 
 .section-tagline{
     color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+}
+
+.section-header {
+    text-align: var(--section-header-align);
 }
 
 :root {
@@ -42,6 +51,11 @@ a {
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
+    --line-height-small: 1.2;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
+    --section-header-align: center;
+    --section-tagline-transform: uppercase;
 }
 
 h1, h2, h3, h4, h5, h6 {
